# game

./: .gitignore  CMakeLists.txt  cleanup_memory.sh  fix_cmake.sh  marching_cubes_template.cpp
data/: config.json
data/chemicals/: chemicals.json
data/models/: Chemical.glb  NERV.glb  NERV.mtl
data/planets/: CHEMICAL_SYSTEM_README.md  README.md  chemicals.json  earth.json  earth_chemical.json  etaui.json  etauos.json  glacieo.json  infinatos.json  mars.json  massivo.json  moon.json  oceanus.json  proxmai.json  sandos.json  sulfos.json  vulcan.json
shaders/: debug_visualize.fs  deferred_composite.fs  deferred_geometry.fs  fragment_light.glsl  fragment_shadow.glsl  shadow.fs  vertex_shadow.glsl  voxel.fs  voxel.vs
src/: MarchingCubes.cpp  MarchingCubes.h  Planet.cpp  Planet.h  SkyAtmosphere.cpp  ThreadPool.h  camera.cpp  camera.h  density_texture.cpp  game_menu.cpp  game_menu.h  gpu_renderer.cpp  gpu_renderer.h  loading_screen.cpp  loading_screen.h  main.cpp  main_new.cpp  marching_cubes.cpp  marching_cubes.h  terrain.h  texture_generation.cpp  voxel_renderer.cpp  voxel_renderer.h  world.cpp  world.h
src/audio/: audio_system.h
src/core/: planet.cpp  planet.h  world.cpp  world.h
src/gameplay/: inventory.cpp  inventory.h
src/rendering/: SkyAtmosphere.h  deferred_renderer.cpp  deferred_renderer.h  gpu_renderer.cpp  gpu_renderer.h  marching_cubes.cpp  marching_cubes.h  model.cpp  model.h  shadow_renderer.cpp  shadow_renderer.h  texture_atlas.cpp  texture_atlas.h  voxel_mesher.cpp  voxel_mesher.h  voxel_mesher_geometry.cpp  voxel_mesher_texturing.cpp
src/shaders/: sky_fragment.glsl  sky_vertex.glsl
src/terrain/: noise.cpp  noise.h  terrain.h
src/ui/: Skip to content  engine_design_gui.cpp  engine_design_gui.h  game_menu.cpp  game_menu.h  loading_screen.cpp  planet_map_gui.cpp  planet_map_gui.h
src/utils/: main_new.cpp
